Second half and navigation collapse fixed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -33,6 +33,17 @@ li {
     list-style-type: none;
 }
 
+a:hover {
+    color: var(--orange) !important;
+    text-decoration: underline;
+}
+
+.collapse {
+    color: var(--orange) !important;
+    outline: var(--orange);
+   
+}
+
 img {
     margin-right: 1.5rem;
     width: 2rem;
@@ -105,7 +116,15 @@ max-width: 900px;
     margin-top: .5rem;
 float: right;  }
 
+.btn-primary {
+    outline:2x solid var(--dk-blue);
+background-color:var(--dk-blue);}
 
+
+.btn-outline-primary {
+    outline:2x solid var(--dk-blue);
+    color: var(--dk-blue);
+}
 	/* -----Media Query ----- */	
 
 
@@ -157,7 +176,6 @@ float: right;  }
             text-shadow: 3px 3px var(--Black);
         }
         .block { padding-left: .5rem; padding-right: .5rem;}
-       
  
 .block-letters .block-blue {color: var(--dk-blue) !important;}
 .block-letters .block-blue {
@@ -170,4 +188,17 @@ float: right;  }
 body {
 	font-size: 1rem;
   }
+	/* -----equation ----- */	
+
+    .equation-box {
+        background-color: var(--white);
+        padding: .75rem .75rem;
+        margin: .75rem 0rem;
+        box-shadow: 5px 5px var(--Black);
+        max-width: 300px;
+        }
+        
+        .digit {
+            font-size: 1.5rem;
+          }
   }
